docs(v1.0): Add comprehensive README with features, usage steps, and examples
Covers: UFW model, class detection, inheritance handling, Camel support,
ApplicationContext mocking, TestData builder, JavaFX UI walkthrough,
generated file structure examples, and version history table.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>